examples/test/testpolicy2304.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2304
  namespace: namespace474
spec:
  podSelector:
    matchLabels:
      key4: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value26
          key12: value4
          key14: value9
      podSelector:
        matchLabels:
          key23: value25
